base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-gitops-operator
  annotations:
    argocd.argoproj.io/sync-wave: "0"
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-gitops
  annotations:
    argocd.argoproj.io/sync-wave: "0"
